Add testForGitHub function

--- a/ЛР2/task31.html
+++ b/ЛР2/task31.html
@@ -27,6 +27,10 @@
 </div>
 </body>
 <script>
+    function testForGitHub() {
+
+    }
+
     function info() {
         const fio = document.getElementById('fio').value
         const day = document.getElementById('birthday').value
