--- a/ЛР2/task31.html
+++ b/ЛР2/task31.html
@@ -36,7 +36,7 @@
         const day = document.getElementById('birthday').value
         const monthNode = document.getElementById('list_month')
         const month = monthNode.options.selectedIndex
-        const year = document.getElementById('birthday').value
+        const year = document.getElementById('birthday').value //Почему здесь не birthyear?
 
         const birthday = `${month}.${day}.${year}`
         const birth_date = new Date(birthday)
