--- a/ЛР3/task464.html
+++ b/ЛР3/task464.html
@@ -3,23 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <LINK REL="stylesheet" HREF="pr424.css" TYPE="text/css">
+<!--    <LINK REL="stylesheet" HREF="pr424.css" TYPE="text/css">-->
     <!-- Можно добавлять объявления в этот список.
          Для этого придуман нераспознаваемы элемент.  -->
-    <ADLIST src="image1/img0" duration=3000></ADLIST>
-    <ADLIST src="image1/img1" duration=2000></ADLIST>
-    <ADLIST src="image1/img2" duration=3000></ADLIST>
-    <ADLIST src="image1/img3"></ADLIST>
-    <ADLIST src="image1/img4" duration=3000></ADLIST>
-    <ADLIST src="image1/img0"></ADLIST>
-    <ADLIST src="image1/img1" duration=3000></ADLIST>
-    <ADLIST src="image1/img2"></ADLIST>
-    <ADLIST src="image1/img3" duration=3000></ADLIST>
-    <ADLIST src="image1/img4"></ADLIST>
-    <ADLIST src="image1/img0" duration=4000></ADLIST>
+    <ADLIST src="image1/img0.jpg" duration=3000></ADLIST>
+    <ADLIST src="image1/img1.jpg" duration=2000></ADLIST>
+    <ADLIST src="image1/img2.jpg" duration=3000></ADLIST>
+    <ADLIST src="image1/img3.jpg"></ADLIST>
+    <ADLIST src="image1/img4.jpg" duration=3000></ADLIST>
+    <ADLIST src="image1/img0.jpg"></ADLIST>
+    <ADLIST src="image1/img1.jpg" duration=3000></ADLIST>
+    <ADLIST src="image1/img2.jpg"></ADLIST>
+    <ADLIST src="image1/img3.jpg" duration=3000></ADLIST>
+    <ADLIST src="image1/img4.jpg"></ADLIST>
+    <ADLIST src="image1/img0.jpg" duration=4000></ADLIST>
 <SCRIPT LANGUAGE="JavaScript">
-    var adSet = document.all.tags("ADLIST");
-    adSet.current = 0;
+    const adSet = []
+    for (let elem of document.all) {
+        if (elem.tagName === "ADLIST") {
+            adSet.push(elem)
+        }
+    }
+    current = 0;
     var nextImage = document.createElement("IMG");
     ////////////////////////////////////////////////////////////
     function preLoad() {
@@ -28,15 +33,15 @@
         /* Всегда переустанавливаются обработчики событий    изображений перед назначением атрибута SRC для гарантии невозможности пропуска события*/
         nextImage.onerror = preLoad;
         nextImage.src =
-            adSet[adSet.current].getAttribute("src");
+            adSet[current].getAttribute("src");
         // Атрибут duration определяет длительность
         // показа изображения.
         nextImage.duration =
-            adSet[adSet.current].getAttribute("duration");
+            adSet[current].getAttribute("duration");
         if (null == nextImage.duration)  //Если не определено, то
             nextImage.duration = 2000;    // по умолчанию 2 секунды.
-        if (++adSet.current === adSet.length)
-            adSet.current = 0;            //Стартуем снова.
+        if (++current === adSet.length)
+            current = 0;            //Стартуем снова.
     }
     ////////////////////////////////////////////////////////////
     function skipImage() {
@@ -52,7 +57,7 @@
     }
     preLoad();
 </SCRIPT>
-                                                </HEAD>
+</HEAD>
 <BODY ONLOAD="window.tm = setTimeout('skipImage()', 1);"
       ONUNLOAD="clearTimeout(window.tm);">
 <H2>Периодически сменяющиеся изображения.</H2>
