--- a/ЛР3/task464.html
+++ b/ЛР3/task464.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-<!--    <LINK REL="stylesheet" HREF="pr424.css" TYPE="text/css">-->
+    <LINK REL="stylesheet" HREF="pr424.css" TYPE="text/css">
     <!-- Можно добавлять объявления в этот список.
          Для этого придуман нераспознаваемы элемент.  -->
     <ADLIST src="image1/img0.jpg" duration=3000></ADLIST>
@@ -61,6 +61,6 @@
 <BODY ONLOAD="window.tm = setTimeout('skipImage()', 1);"
       ONUNLOAD="clearTimeout(window.tm);">
 <H2>Периодически сменяющиеся изображения.</H2>
-<IMG name="ad" SRC="image1/img0">
+<IMG name="ad" SRC="image1/img0.jpg">
 </BODY>
 </html>
