--- a/ЛР2/task31.html
+++ b/ЛР2/task31.html
@@ -34,7 +34,7 @@
         const month = monthNode.options.selectedIndex
         const year = document.getElementById('birthyear').value
 
-        if (fio === null) {
+        if (fio === '') {
             alert("Введите ФИО")
             return
         }
