--- a/ЛР2/task31.html
+++ b/ЛР2/task31.html
@@ -29,25 +29,28 @@
 <script>
     function info() {
         const fio = document.getElementById('fio').value
-        const day = document.getElementById('birthday').value
-        const monthNode = document.getElementById('list_month')
-        const month = monthNode.options.selectedIndex
-        const year = document.getElementById('birthyear').value
-
         if (fio === '') {
             alert("Введите ФИО")
             return
         }
+
+        const month = document.getElementById('list_month').options.selectedIndex
         if (month === 0) {
             alert("Выберите месяц")
             return
         }
-        if (day === null || day < 1 || day > 31 || !Number.isInteger(Number(day))) {
-            alert("Не корректно введен день")
-            return
-        }
+
+        const year = document.getElementById('birthyear').value
         if (year === '' || year < 0 || !Number.isInteger(Number(year))) {
             alert("Не корректно введен год")
+            return
+        }
+
+        let max_days_in_month = new Date(year, month, 0).toLocaleString('default', {day: 'numeric'})
+
+        const day = document.getElementById('birthday').value
+        if (day === null || day < 1 || day > max_days_in_month || !Number.isInteger(Number(day))) {
+            alert("Не корректно введен день")
             return
         }
 
