--- a/table_7_new.html
+++ b/table_7_new.html
@@ -26,123 +26,124 @@
     <div class="container">
         <h2>Цены</h2>
         <TABLE bgcolor="yellow" border="5" cellpadding=3 cellspacing=5 class="prices_table">
-                <TR> <!-- 1-я строка с "шапкой" -->
-                    <td colspan="2" rowspan="4" bgcolor="#e6e6fa">
-                    </td>
-                    <TH colspan="13" bgcolor="white">
-                        Категории товара
-                    </TH>
-                </TR>
-                <TR> <!-- 2-я строка для темы 1 -->
-                    <th colspan="3" bgcolor="white">Часы</th>
-                    <th colspan="3" bgcolor="white">Кольца</th>
-                    <th colspan="2" bgcolor="white">Браслеты</th>
-                    <th colspan="5" bgcolor="white">Серьги</th>
-                </TR>
-                <TR> <!-- 3-я строка для темы 2 -->
-                    <TD rowspan="2" colspan="2" bgcolor="white">Золото+бриллиант</TD>
-                    <TD rowspan="2" bgcolor="white">Серебро </TD>
-                    <TD rowspan="2" bgcolor="white">Золото</TD>
-                    <TD colspan="2" bgcolor="white">Серебро+бриллиант</TD>
-                    <TD rowspan="2" bgcolor="white">Серебро</TD>
-                    <TD rowspan="2" bgcolor="white">Золото</TD>
-                    <TD rowspan="2" bgcolor="white">Серебро</TD>
-                    <TD rowspan="2" bgcolor="white">Золото</TD>
-                    <TD colspan="3" bgcolor="white">Бриллиант</TD>
-                </TR>
-                <TR> <!-- 4-я строка для темы 3 -->
-                    <TD bgcolor="white">Мелкий карат</TD>
-                    <TD bgcolor="white">Средний карат</TD>
-                    <TD bgcolor="white">Мелкий карат</TD>
-                    <TD bgcolor="white">Средний карат</TD>
-                    <TD bgcolor="white">Крупный карат</TD>
-                </TR>
-                <tr>
-                    <th rowspan="4" bgcolor="white">Страна</th>
-                    <td bgcolor="white">Швейцария</td>
-                    <td bgcolor="white">3000</td>
-                    <td bgcolor="white">600</td>
-                    <td bgcolor="white">1500</td>
-                    <td bgcolor="white">200</td>
-                    <td bgcolor="white">180</td>
-                    <td bgcolor="white">300</td>
-                    <td bgcolor="white">500</td>
-                    <td bgcolor="white">750</td>
-                    <td bgcolor="white">325</td>
-                    <td bgcolor="white">525</td>
-                    <td bgcolor="white">625</td>
-                    <td bgcolor="white">750</td>
-                    <td bgcolor="white">1000</td>
-                </tr>
-                <tr>
-                    <td bgcolor="white">Греция</td>
-                    <td bgcolor="white">2900</td>
-                    <td bgcolor="white">700</td>
-                    <td bgcolor="white">1420</td>
-                    <td bgcolor="white">330</td>
-                    <td bgcolor="white">580</td>
-                    <td bgcolor="white">450</td>
-                    <td bgcolor="white">330</td>
-                    <td bgcolor="white">530</td>
-                    <td bgcolor="white">600</td>
-                    <td bgcolor="white">740</td>
-                    <td bgcolor="white">900</td>
-                    <td bgcolor="white">800</td>
-                    <td bgcolor="white">900</td>
-                </tr>
-                <tr>
-                    <td bgcolor="white">Испания</td>
-                    <td bgcolor="white">2200</td>
-                    <td bgcolor="white">680</td>
-                    <td bgcolor="white">1420</td>
-                    <td bgcolor="white">338</td>
-                    <td bgcolor="white">588</td>
-                    <td bgcolor="white">457</td>
-                    <td bgcolor="white">338</td>
-                    <td bgcolor="white">534</td>
-                    <td bgcolor="white">692</td>
-                    <td bgcolor="white">660</td>
-                    <td bgcolor="white">890</td>
-                    <td bgcolor="white">880</td>
-                    <td bgcolor="white">810</td>
-                </tr>
-                <tr>
-                    <td bgcolor="white">Россия</td>
-                    <td bgcolor="white">2800</td>
-                    <td bgcolor="white">550</td>
-                    <td bgcolor="white">1385</td>
-                    <td bgcolor="white">400</td>
-                    <td bgcolor="white">600</td>
-                    <td bgcolor="white">460</td>
-                    <td bgcolor="white">390</td>
-                    <td bgcolor="white">610</td>
-                    <td bgcolor="white">710</td>
-                    <td bgcolor="white">630</td>
-                    <td bgcolor="white">920</td>
-                    <td bgcolor="white">905</td>
-                    <td bgcolor="white">812</td>
-                </tr>
+            <TR> <!-- 1-я строка с "шапкой" -->
+                <td colspan="2" rowspan="4" bgcolor="#e6e6fa">
+                </td>
+                <TH colspan="13" bgcolor="white">
+                    Категории товара
+                </TH>
+            </TR>
+            <TR> <!-- 2-я строка для темы 1 -->
+                <th colspan="3" bgcolor="white">Часы</th>
+                <th colspan="3" bgcolor="white">Кольца</th>
+                <th colspan="2" bgcolor="white">Браслеты</th>
+                <th colspan="5" bgcolor="white">Серьги</th>
+            </TR>
+            <TR> <!-- 3-я строка для темы 2 -->
+                <TD rowspan="2" colspan="2" bgcolor="white">Золото+бриллиант</TD>
+                <TD rowspan="2" bgcolor="white">Серебро </TD>
+                <TD rowspan="2" bgcolor="white">Золото</TD>
+                <TD colspan="2" bgcolor="white">Серебро+бриллиант</TD>
+                <TD rowspan="2" bgcolor="white">Серебро</TD>
+                <TD rowspan="2" bgcolor="white">Золото</TD>
+                <TD rowspan="2" bgcolor="white">Серебро</TD>
+                <TD rowspan="2" bgcolor="white">Золото</TD>
+                <TD colspan="3" bgcolor="white">Бриллиант</TD>
+            </TR>
+            <TR> <!-- 4-я строка для темы 3 -->
+                <TD bgcolor="white">Мелкий карат</TD>
+                <TD bgcolor="white">Средний карат</TD>
+                <TD bgcolor="white">Мелкий карат</TD>
+                <TD bgcolor="white">Средний карат</TD>
+                <TD bgcolor="white">Крупный карат</TD>
+            </TR>
+            <tr value="Швейцария">
+                <th rowspan="4" bgcolor="white">Страна</th>
+                <td bgcolor="white">Швейцария</td>
+                <td bgcolor="white" value="Часы">3000</td>
+                <td bgcolor="white" value="Часы">600</td>
+                <td bgcolor="white" value="Часы">1500</td>
+                <td bgcolor="white" value="Кольца">200</td>
+                <td bgcolor="white" value="Кольца">180</td>
+                <td bgcolor="white" value="Кольца">300</td>
+                <td bgcolor="white" value="Браслеты">500</td>
+                <td bgcolor="white" value="Браслеты">750</td>
+                <td bgcolor="white" value="Серьги">325</td>
+                <td bgcolor="white" value="Серьги">525</td>
+                <td bgcolor="white" value="Серьги">625</td>
+                <td bgcolor="white" value="Серьги">750</td>
+                <td bgcolor="white" value="Серьги">1000</td>
+            </tr>
+            <tr value="Греция">
+                <td bgcolor="white">Греция</td>
+                <td bgcolor="white" value="Часы">2900</td>
+                <td bgcolor="white" value="Часы">700</td>
+                <td bgcolor="white" value="Часы">1420</td>
+                <td bgcolor="white" value="Кольца">330</td>
+                <td bgcolor="white" value="Кольца">580</td>
+                <td bgcolor="white" value="Кольца">450</td>
+                <td bgcolor="white" value="Браслеты">330</td>
+                <td bgcolor="white" value="Браслеты">530</td>
+                <td bgcolor="white" value="Серьги">600</td>
+                <td bgcolor="white" value="Серьги">740</td>
+                <td bgcolor="white" value="Серьги">900</td>
+                <td bgcolor="white" value="Серьги">800</td>
+                <td bgcolor="white" value="Серьги">900</td>
+            </tr>
+            <tr value="Испания">
+                <td bgcolor="white">Испания</td>
+                <td bgcolor="white" value="Часы">2200</td>
+                <td bgcolor="white" value="Часы">680</td>
+                <td bgcolor="white" value="Часы">1420</td>
+                <td bgcolor="white" value="Кольца">338</td>
+                <td bgcolor="white" value="Кольца">588</td>
+                <td bgcolor="white" value="Кольца">457</td>
+                <td bgcolor="white" value="Браслеты">338</td>
+                <td bgcolor="white" value="Браслеты">534</td>
+                <td bgcolor="white" value="Серьги">692</td>
+                <td bgcolor="white" value="Серьги">660</td>
+                <td bgcolor="white" value="Серьги">890</td>
+                <td bgcolor="white" value="Серьги">880</td>
+                <td bgcolor="white" value="Серьги">810</td>
+            </tr>
+            <tr value="Россия">
+                <td bgcolor="white">Россия</td>
+                <td bgcolor="white" value="Часы">2800</td>
+                <td bgcolor="white" value="Часы">550</td>
+                <td bgcolor="white" value="Часы">1385</td>
+                <td bgcolor="white" value="Кольца">400</td>
+                <td bgcolor="white" value="Кольца">600</td>
+                <td bgcolor="white" value="Кольца">460</td>
+                <td bgcolor="white" value="Браслеты">390</td>
+                <td bgcolor="white" value="Браслеты">610</td>
+                <td bgcolor="white" value="Серьги">710</td>
+                <td bgcolor="white" value="Серьги">630</td>
+                <td bgcolor="white" value="Серьги">920</td>
+                <td bgcolor="white" value="Серьги">905</td>
+                <td bgcolor="white" value="Серьги">812</td>
+            </tr>
         </TABLE>
         <br>
-        <form class="table_form">
-            <p>Проверьте ваши знания</p>
-            <p>Часы золото+бриллиант проивзодятся в странах</p>
-            <p><input class="q" name="a" type="checkbox" value="r" checked> Швейцария</p>
-            <p><input class="q" name="a" type="checkbox" value="r" checked> Россия</p>
-            <p><input class="q" name="a" type="checkbox" value="" > Германия</p>
-            <p><input class="q" name="a" type="checkbox" value=""> Марокко</p>
-            <br>
-            <p>Какие категории товаров есть у нас</p>
-            <p><input class="q" name="b" type="checkbox" value="r" checked> Часы</p>
-            <p><input class="q" name="b" type="checkbox" value="r" checked> Браслеты</p>
-            <p><input class="q" name="b" type="checkbox" value="" > Ожерелья</p>
-            <br>
-            <p><input type="button" value="Проверить" onclick="proverka()"></p>
-<!--            <p><input name="c" type="radio" value="watch"> Часы</p>-->
-<!--            <p><input name="c" type="radio" value="earrings"> Серьги</p>-->
-<!--            <p><input name="c" type="radio" value="ring" checked> Кольца</p>-->
-<!--            <p><input name="c" type="radio" value="bracelets"> Браслеты</p>-->
-        </form>
+        <button onclick="sum()">Посчитать сумму</button>
+        <!--        <form class="table_form">-->
+        <!--            <p>Проверьте ваши знания</p>-->
+        <!--            <p>Часы золото+бриллиант проивзодятся в странах</p>-->
+        <!--            <p><input class="q" name="a" type="checkbox" value="r" checked> Швейцария</p>-->
+        <!--            <p><input class="q" name="a" type="checkbox" value="r" checked> Россия</p>-->
+        <!--            <p><input class="q" name="a" type="checkbox" value="" > Германия</p>-->
+        <!--            <p><input class="q" name="a" type="checkbox" value=""> Марокко</p>-->
+        <!--            <br>-->
+        <!--            <p>Какие категории товаров есть у нас</p>-->
+        <!--            <p><input class="q" name="b" type="checkbox" value="r" checked> Часы</p>-->
+        <!--            <p><input class="q" name="b" type="checkbox" value="r" checked> Браслеты</p>-->
+        <!--            <p><input class="q" name="b" type="checkbox" value="" > Ожерелья</p>-->
+        <!--            <br>-->
+        <!--            <p><input type="button" value="Проверить" onclick="proverka()"></p>-->
+        <!--&lt;!&ndash;            <p><input name="c" type="radio" value="watch"> Часы</p>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <p><input name="c" type="radio" value="earrings"> Серьги</p>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <p><input name="c" type="radio" value="ring" checked> Кольца</p>&ndash;&gt;-->
+        <!--&lt;!&ndash;            <p><input name="c" type="radio" value="bracelets"> Браслеты</p>&ndash;&gt;-->
+        <!--        </form>-->
     </div>
 </section>
 <footer class="footer">
@@ -156,6 +157,38 @@
 </footer>
 </body>
 <script>
+    function sum() {
+        let tovar = prompt('Введите товар')
+        if (!['часы', 'кольца', 'браслеты', 'серьги'].includes(tovar.toLowerCase())) {
+            alert('Нет такого товара')
+            return
+        }
+        let strana = prompt('Введите страну')
+        if (!['швейцария', 'греция', 'испания', 'россия'].includes(strana.toLowerCase())) {
+            alert('Нет такой страны')
+            alert(strana)
+            return
+        }
+
+        const trs = document.getElementsByTagName('tr')
+        let tr_strana = null
+        for (let tr of trs) {
+            if (tr.getAttribute('value') === strana) {
+                tr_strana = tr
+            }
+        }
+
+        const tds = tr_strana.getElementsByTagName('td')
+        let sum = 0
+        for (let td of tds) {
+            if (td.getAttribute('value') === tovar) {
+                sum += Number(td.innerText)
+            }
+        }
+
+        alert(sum)
+    }
+
     function proverka() {
         const elements = document.getElementsByClassName('q')
         let cor = 0, vsego_cor = 0, lishnix = 0
