--- a/table_7_new.html
+++ b/table_7_new.html
@@ -189,30 +189,30 @@
         alert(sum)
     }
 
-    function proverka() {
-        const elements = document.getElementsByClassName('q')
-        let cor = 0, vsego_cor = 0, lishnix = 0
-        for (let elem of elements) {
-            if (elem.value === "r") {
-                vsego_cor++
-            }
-            if (elem.checked === true) {
-                if (elem.value === "r") {
-                    cor++
-                }
-                else {
-                    lishnix++
-                }
-            }
-        }
-        let res = cor-lishnix
-        if (res < 0) {
-            res = 0
-        }
-        alert("Вы дали " + cor + " правильных ответов");
-        alert("Ваш результат: " + res/vsego_cor * 100 + "%");
-    }
-
-    // 2/4 + 2/3
+    // function proverka() {
+    //     const elements = document.getElementsByClassName('q')
+    //     let cor = 0, vsego_cor = 0, lishnix = 0
+    //     for (let elem of elements) {
+    //         if (elem.value === "r") {
+    //             vsego_cor++
+    //         }
+    //         if (elem.checked === true) {
+    //             if (elem.value === "r") {
+    //                 cor++
+    //             }
+    //             else {
+    //                 lishnix++
+    //             }
+    //         }
+    //     }
+    //     let res = cor-lishnix
+    //     if (res < 0) {
+    //         res = 0
+    //     }
+    //     alert("Вы дали " + cor + " правильных ответов");
+    //     alert("Ваш результат: " + res/vsego_cor * 100 + "%");
+    // }
+    //
+    // // 2/4 + 2/3
 </script>
 </html>
