--- a/ЛР2/task41.html
+++ b/ЛР2/task41.html
@@ -22,12 +22,19 @@
 
 <!-- кнопка для расчётов -->
 <button onclick="func()">Вычислить</button>
-
+<br><br><br>
+<button onclick="vych()">Вычислить по новому варианту</button>
 <!-- здесь будет результат -->
 <p id="result"></p>
 
 <!-- наш скрипт -->
 <script>
+
+    function vych(){
+        let num1 = prompt('Введите первое число')
+        let num2 = prompt('Введите второе число')
+        let reset = confirm('Желаете повторить?')
+    }
     // переменная, в которой хранится выбранное математическое действие
     let op;
 
