--- a/ЛР2/task41.html
+++ b/ЛР2/task41.html
@@ -29,14 +29,32 @@
 
 <!-- наш скрипт -->
 <script>
-
-    function vych(){
-        let num1 = prompt('Введите первое число')
-        let num2 = prompt('Введите второе число')
-        let reset = confirm('Желаете повторить?')
-    }
     // переменная, в которой хранится выбранное математическое действие
     let op;
+
+    function vych() {
+        if (!op) {
+            alert('Выберите операцию')
+            return
+        }
+        let num1 = prompt('Введите первое число')
+        let num2 = prompt('Введите второе число')
+
+        if (!num1 || !num2) {
+            return
+        }
+
+        document.getElementById('num1').value = num1
+        document.getElementById('num2').value = num2
+
+        func()
+
+        const result = document.getElementById("result").innerHTML
+        let reset = confirm(`Результат: ${result}\nЖелаете повторить?`)
+        if (reset) {
+            vych()
+        }
+    }
 
     function preobraz(number) {
         let [prefix, postfix] = number.split(/[0-9]+/)
