--- a/ЛР3/task311.html
+++ b/ЛР3/task311.html
@@ -7,10 +7,9 @@
 
   <script language="JavaScript">
     var response = confirm("Вы выбираете JavaScript? - Нажмите OK. А если нет - Cancel."); // а как еще здесь можно применить оператор var
-    if ( response == true )
+    if ( response === true )
     {
       alert("Отличный выбор!")
-
     }
     else
     {
