--- a/ЛР3/task3110.html
+++ b/ЛР3/task3110.html
@@ -6,7 +6,7 @@
     <script language="JavaScript">
         for(i = 0; i < 3;  i++) {
             pass = prompt('Введите пароль, пожалуйста:');
-            if (pass == 'pswrdPIP') {
+            if (pass === 'pswrdPIP') {
                 alert('Поздравляю! Вы ввели верный пароль!')
             } else {
                 alert('Сожалею, но вы ввели   неправильный пароль. Повторите, пожалуйста!'), top.location.href = "pr3510_refuse.htm"
