--- a/ЛР3/task333.html
+++ b/ЛР3/task333.html
@@ -5,7 +5,8 @@
     <title>Title</title>
   <script language="JavaScript">
     function income (ob_frm)
-    {     var inc_m1=1.00*ob_frm.elements[0].value;
+    {
+      var inc_m1=1.00*ob_frm.elements[0].value;
       var inc_m2=1.00*ob_frm.elements[1].value;
       var inc_m3=1.00*ob_frm.elements[2].value;
       var inc_m4=1.00*ob_frm.elements[3].value;
