--- a/ЛР3/task317.html
+++ b/ЛР3/task317.html
@@ -8,13 +8,13 @@
         while (x < 10)
         {
             x++;
-            if (x % 2 == 1)
+            if (x % 2 === 1)
             {
                 continue;
             }
             alert(x);
         }
-        if (x % 2 == 0) {alert("Вы забыли про условие задания 3.5.7 ?");}
+        if (x % 2 === 0) {alert("Вы забыли про условие задания 3.5.7 ?");}
     </script>
 </head>
 <body>
