--- a/ЛР3/task318.html
+++ b/ЛР3/task318.html
@@ -6,9 +6,9 @@
     <script language="JavaScript">
         var breakat;
         breakat = prompt("Введите число для прерывания цикла от 1 до 10-ти ", "");
-        for (x=0; x < 10; x++)
+        for (let x = 0; x < 10; x++)
         {
-            if (x == breakat)
+            if (x === breakat)
             {
                 break;
             }
