--- a/ЛР3/task351.html
+++ b/ЛР3/task351.html
@@ -1,81 +1,98 @@
 <head>
-  <title>Пример 4_1: DHTML - применение слоев- движение изображения с вращающимся спутником</title>
-  <META content="text/html; charset=windows-1251" http-equiv="Content-Type">
-  <SCRIPT LANGUAGE="JavaScript1.2">
-    var p1;     // текущая координата слоя
-    var sp1;    // приращение при движении слоя
+<title>Пример 4_1: DHTML - применение слоев- движение изображения с вращающимся спутником</title>
+<META content="text/html; charset=windows-1251" http-equiv="Content-Type">
+<SCRIPT LANGUAGE="JavaScript1.2">
+    var line_left;     // текущая координата слоя
+    var line_top;    // приращение при движении слоя
+    let sp = 1
+    let line_angle = 0
     var Circle = false;
     var Line = false;
+
+    //  начальные установки для движения по окружности
+    var angle = 0
+    var radius = 50
+    var xbegin = 80
+    var ybegin = 80
+    var d = document
+
+    //  сдвиг слоя на вычисленный шаг вправо
+    var timerLine = 10
+    var timerCircle = 10
+
     // установка начальных параметров перемещения слоя
     function initLine()
-    {Line = false;
-      p1=700;
-      sp1=1;
-      l1.style.left=700;
-    }
-    //  сдвиг слоя на вычисленный шаг вправо
-    var timerLine = 10;
-    function succLine()
-    {sp1=1;
-      p1-=sp1;
-      if (p1 < 24) p1=700;
-      l1.style.left=p1;
-      timerLine=setTimeout("succLine()", 200);
-      if(Line===true) stoppedLine();
-    }
-    var timerCircle = 10;
-    function initCircle()
     {
-      timerCircle=setInterval('moveImage()', 10);
+        Line = false
+        line_left = 700
+        line_top = 101
+        sp1 = 1
+        line_angle = 0
+        l1.style.left = 700
     }
-    //  начальные установки для движения по окружности
-    var angle = 0;
-    var radius = 50;
-    var xbegin = 80;
-    var ybegin = 80;
-    var d = document;
+
+    function succLine() {
+        sp1 = 1;
+        line_left -= sp1;
+        if (line_left < 24) line_left = 700;
+
+        let rad = line_angle * Math.PI/180
+        //  вычисление координаты следующего положения изображения
+        l1.style.left = line_left
+        l1.style.top = (line_top - radius * Math.sin(rad)).toString()
+        line_angle += 1
+        if (line_angle >= 360) line_angle = 0
+        // l1.style.left = p1
+        timerLine = setTimeout("succLine()", 200)
+        if (Line === true) stoppedLine()
+    }
+
+    function initCircle() {
+        Circle = false
+        timerCircle = setInterval('moveImage()', 10)
+    }
+
     //   движение изображения-спутника по окружности
     function moveImage()
-    {var
-            rad = angle * Math.PI/180;
-      //  вычисление координаты следующего положения изображения
-      d.myimage.style.left = (xbegin - radius * Math.sin(rad)).toString();
-      d.myimage.style.top = (ybegin - radius * Math.cos(rad)).toString();
-      angle +=1;
-      if (angle >= 360) angle = 0;
-      if (Circle===true) stoppedCircle();
+    {
+        var rad = angle * Math.PI/180
+        //  вычисление координаты следующего положения изображения
+        d.myimage.style.left = (xbegin - radius * Math.sin(rad)).toString()
+        d.myimage.style.top = (ybegin - radius * Math.cos(rad)).toString()
+        angle +=1
+        if (angle >= 360) angle = 0
+        if (Circle===true) stoppedCircle()
     }
     /////////////
-    function stoppedCircle()
-    {
-      clearInterval(timerCircle);
+    function stoppedCircle() {
+        clearInterval(timerCircle)
     }
-    function stoppedLine()
-    {
-      clearTimeout(timerLine);
+
+    function stoppedLine() {
+        clearTimeout(timerLine)
     }
-    //////////////
-  </SCRIPT>
+//////////////
+</SCRIPT>
 </head>
 <body onload = "initLine()">
 <center>
-  <h3>Пример использования слоёв: движение изображения с вращающимся спутником</h3>
-  <FORM name="form1">
-    <input type="button" value="Ускорить спутник" onClick="initCircle()">
-    <input type="button" value="Ускорить влево" onClick="initLine(); succLine()">
-    <input type="button" value="Влево" onClick="initLine()">
-    <input type="button" value="Тормоз спутника" onClick="Circle=true">
-    <input type="button" value="Стоп вправо" onClick="Line=true">
-  </FORM>
+<h3>Пример использования слоёв: движение изображения с вращающимся спутником</h3>
+<FORM name="form1">
+<input type="button" value="Ускорить спутник" onClick="initCircle()">
+<input type="button" value="Ускорить влево" onClick="initLine(); succLine()">
+<input type="button" value="Влево" onClick="initLine()">
+<input type="button" value="Тормоз спутника" onClick="Circle=true">
+<input type="button" value="Стоп" onClick="Line=true">
+</FORM>
 </center>
 <table width=878 height=185 border=4 bgcolor="black" bordercolor="silver">
-  <tr><td>
-    <div  id="l1" style="position:absolute; left:700px; background:gold; width:178px; height:176px; top:101px;">
-      <img src="image1/img0.jpg" name="mycenter";
-           style="position:absolute; left:80px; top: 80px; width:40px; height:15px">
-      <img src="image1/img1.jpg" name="myimage";
-           style="position:absolute; left:80px; top:130px; width:42px; height:23px">
-    </div>
-  </td></tr>
+<tr><td>
+<div  id="l1" style="position:absolute; left:700px; background:gold; width:178px; height:176px; top:101px;">
+<img src="image1/img0.jpg" name="mycenter";
+ style="position:absolute; left:80px; top: 80px; width:40px; height:15px">
+<img src="image1/img1.jpg" name="myimage";
+ style="position:absolute; left:80px; top:130px; width:42px; height:23px">
+</div>
+</td></tr>
 </table>
 </body>
